Migrate recruiter search home to React
